2009-03-30  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-part.c: Removed unused includes.

	* gmime/gmime-utils.c: Only #include <sys/utsname.h> if we have
	utsname.domainname. Helps build process on Windows.

2009-03-29  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.5

2009-03-27  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream-buffer.c: Fixed to be more diligent in setting
	errno on error.

	* gmime/gmime-stream-mmap.c: Fixed to be more diligent in setting
	errno on error.

	* gmime/gmime-stream-mem.c: Fixed to be more diligent in setting
	errno on error.
	(stream_seek): If the user seeks beyond the end of the buffer and
	bound_end is unbound, then grow the buffer (e.g. a sparse file).

	* gmime/gmime-stream-file.c: Fixed to be more diligent in setting
	errno on error.

	* gmime/gmime-stream-fs.c: Fixed to be more diligent in setting
	errno on error.

2009-03-20  Jeffrey Stedfast  <fejj@novell.com>

	* configure.in: Default --enable-largefile to yes. Looks like I
	forgot to do this before rolling the version to 2.4.0 like I
	intended.

	* tools/Makefile.am: Fixed to include the porting script in
	EXTRA_DIST (instead of extra_DIST) so that the tarball includes
	it, doh!

2009-03-18  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.4

2009-03-18  Jeffrey Stedfast  <fejj@novell.com>

	* configure.in: Check for select() and poll() as well as poll.h

	* gmime/gmime-gpg-context.c (poll): Implement our own poll()
	function using select() for portability to MacOS 10.2, which
	apparently doesn't have poll().

2009-02-22  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c: Use GSlice for rfc822 word tokens and date
	tokens.

	* gmime/gmime-parser.c: Updated to use GSlice.

2009-02-22  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-header.c (g_mime_header_iter_new): Use
	g_slice_new().
	(g_mime_header_iter_free): Use g_slice_free().